--- a/cake.HTML
+++ b/cake.HTML
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/cake.css">
+  <link rel="stylesheet" href="./cake.css">
   <title>Birthday</title>
 </head>
 <body>
