--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>birthday</title>
     <link rel="stylesheet" href="https://unpkg.com/7.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
