--- a/cake.HTML
+++ b/cake.HTML
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./cake.css">
+  <link rel="stylesheet" href="./styles/cake.css">
   <title>Birthday</title>
 </head>
 <body>
@@ -55,21 +55,22 @@
   <bokeh></bokeh>
   <bokeh></bokeh>
   <bokeh></bokeh>
-  <div class="mobile">Open in desktop</div>
+  <audio id="backgroundMusic" autoplay loop>
+    <source src="Happy.mp3" type="audio/mpeg">
+  </audio>
+   <div class="mobile"></div>
   <div class="pyro">
     <div class="before"></div>
     <div class="after"></div>
   </div>
-  <h1>From Sangam!</h1>
   <h2>Happy Birthday Anshika!</h2>
-  <span>🎉</span>
   <div class="candle">
     <div id="flame" class="lit"></div>
   </div>
 
   <div class="cake"></div>
   <div class="plate"></div>
-
+<script src="cake.js"></script>
 </body>
 
 </html>
